--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		box-sizing: border-box;
 	}
 	.container{
-		background-image: url('../images/contact-bg.jpg');
+		background-image: url('contact-bg.jpg');
 		height: 100vh;
 		width: 100%;
 		display: flex;
